Fix wrapping of long document bucket titles
If a document bucket had a long word in its title, for example
Pitt_Comp_Literacy_Culture_Distant_Publics_Development_Rhetoric_and_the_Subject_of_Crisis.pdf,
this word was not being wrapped and was overflowing out of the document
bucket and expanding the width of the entire page (especially on mobile).

This commit makes browsers wrap within word if necessary to prevent
overflow.

Fixes #3927

--- a/h/static/styles/partials-v2/_search.scss
+++ b/h/static/styles/partials-v2/_search.scss
@@ -64,6 +64,7 @@
   font-weight: bold;
   flex-grow: 1;
   margin-right: 5px;
+  word-break: break-all;
 }
 
 .search-result-bucket__annotations-count {
